k8s-kurulum/manifests/namespaces/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
